# sequence_classification

./: .gitignore  data_test.ipynb  fine_tuning.ipynb  people.txt  pyproject.toml  pytesseract.ipynb  requirements.txt  strip_headers.py  text.py
data/raw/: PG10353_raw.txt  PG10425_raw.txt  PG10426_raw.txt  PG10428_raw.txt  PG2054_raw.txt  PG2146_raw.txt  PG2229_raw.txt  PG2230_raw.txt  PG2321_raw.txt  PG2406_raw.txt  PG6383_raw.txt  PG6496_raw.txt  PG6498_raw.txt  PG6499_raw.txt  PG6505_raw.txt  PG7939_raw.txt  PG9260_raw.txt
