[tool.poetry]
name = "sequence-classification-poc"
version = "0.1.0"
description = ""
authors = ["Jakob Hauser <jakob.e.hauser@protonmail.com>"]
readme = "README.md"
packages = [{include = "sequence_classification_poc"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
pandas = "^1.5.3"
jupyterlab = "^3.6.1"
label-studio-converter = "^0.0.50"
polars = "^0.16.6"
transformers = "^4.26.1"
ipywidgets = "^8.0.4"
scikit-learn = "^1.2.1"
evaluate = "^0.4.0"
spacy = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.294"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
